# ainativeOS

./: .gitignore  Dockerfile  README.md  pom.xml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  backlog.md  quick-start.md  roadmap.md  vm-setup.md
frontend/: Dockerfile  index.html  nginx.conf
infra/: .env.example  docker-compose.yml  start-deps.sh  vm-bootstrap.sh
plugins/: echo-plugin.json
python-sdk/: README.md  pyproject.toml
python-sdk/ainativeos_sdk/: __init__.py  client.py
python-sdk/examples/: basic_demo.py
src/main/java/com/ainativeos/: AiNativeOsApplication.java
src/main/java/com/ainativeos/api/: GoalController.java
src/main/java/com/ainativeos/audit/: OperationAuditService.java
src/main/java/com/ainativeos/capability/: CapabilityProvider.java  CapabilityRouter.java
src/main/java/com/ainativeos/cli/: AinativeOsCli.java
src/main/java/com/ainativeos/common/: GlobalExceptionHandler.java
src/main/java/com/ainativeos/config/: ExecutionConfig.java  ExecutionPolicyProperties.java
src/main/java/com/ainativeos/domain/: AtomicOp.java  ContextFrame.java  DesiredState.java  ErrorVector.java  ExecutionStatus.java  ExecutionTraceEntry.java  FailureObject.java  GoalExecutionResult.java  GoalPlan.java  GoalSpec.java  OpExecutionResult.java  Recoverability.java
src/main/java/com/ainativeos/event/: EventProperties.java  ExecutionEventPublisher.java  WebhookExecutionEventPublisher.java
src/main/resources/: application.yml
src/test/java/com/ainativeos/: AiNativeOsApplicationTests.java
src/test/resources/: application-test.yml
(+98 files in other folders)
