[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainativeos-sdk"
version = "0.1.0"
description = "Python SDK for AI-Native OS control plane"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "ainativeos"}]
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ainativeos_sdk*"]
